--- a/cicd-template.yaml
+++ b/cicd-template.yaml
@@ -336,13 +336,13 @@ objects:
             # if [ "${EPHEMERAL}" == "true" ] ; then
             #   oc new-app -f https://raw.githubusercontent.com/siamaksade/gogs-openshift-docker/master/openshift/gogs-template.yaml \
             #       --param=GOGS_VERSION=0.11.34 \
-            #       --param=DATABASE_VERSION=9.6 \
+            #       --param=DATABASE_VERSION=10 \
             #       --param=HOSTNAME=$GOGS_HOSTNAME \
             #       --param=SKIP_TLS_VERIFY=true
             # else
             #   oc new-app -f https://raw.githubusercontent.com/siamaksade/gogs-openshift-docker/master/openshift/gogs-persistent-template.yaml \
             #       --param=GOGS_VERSION=0.11.34 \
-            #       --param=DATABASE_VERSION=9.6 \
+            #       --param=DATABASE_VERSION=10\
             #       --param=HOSTNAME=$GOGS_HOSTNAME \
             #       --param=SKIP_TLS_VERIFY=true
             # fi
@@ -350,13 +350,13 @@ objects:
             if [ "${EPHEMERAL}" == "true" ] ; then
               oc new-app -f  https://raw.githubusercontent.com/OpenShiftDemos/gogs-openshift-docker/master/openshift/gogs-template.yaml \
                   --param=GOGS_VERSION=0.11.34 \
-                  --param=DATABASE_VERSION=9.6 \
+                  --param=DATABASE_VERSION=10 \
                   --param=HOSTNAME=$GOGS_HOSTNAME \
                   --param=SKIP_TLS_VERIFY=true
             else
               oc new-app -f  https://raw.githubusercontent.com/OpenShiftDemos/gogs-openshift-docker/master/openshift/gogs-persistent-template.yaml \
                   --param=GOGS_VERSION=0.11.34 \
-                  --param=DATABASE_VERSION=9.6 \
+                  --param=DATABASE_VERSION=10 \
                   --param=HOSTNAME=$GOGS_HOSTNAME \
                   --param=SKIP_TLS_VERIFY=true
             fi
